fix pictures not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
 .pic {
   display: none;
 }
-
-#output {
-  display: none;
-}
